--- a/op.nonprod.env
+++ b/op.nonprod.env
@@ -1,1 +1,1 @@
-export STACK_MANAGEMENT_TOKEN={{ op://cohorts/team##-201-svc-grafana/team##201stack_management_sa_key }}
+export STACK_MANAGEMENT_TOKEN={{ op://cohorts/team5-201-svc-grafana/team5201stack_management_sa_key }}
